Added product and stuff that has got to be with it

--- a/Areas/Admin/Views/Category/Index.cshtml
+++ b/Areas/Admin/Views/Category/Index.cshtml
@@ -26,7 +26,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var obj in Model) {
+            @foreach(var obj in Model.OrderBy(category => category.DisplayOrder)) {
                 <tr class="table-active">
                     <td>@obj.Name</td>
                     <td>
